--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,6 +17,10 @@ layout: default
         <li>
           <a href="{{ post.url }}">{{ post.title }}</a>
           <time datetime="{{ post.date }}"></time>
+            <small>
+              <strong>{{ post.date | date_to_string }}</strong>
+          </small>
+        </time>
         </li>
       {% endfor %}
     </ul>
