--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,6 +2,12 @@
 layout: default
 ---
 
+td {
+	border: 0px solid;
+	overflow: hidden;
+	vertical-align: top;
+}
+
 <h2>{{ page.title }}</h2>
 
   {% include page-intro.html %}
@@ -12,17 +18,27 @@ layout: default
 
     <h3>Recent posts from the blog</h3>
 
+    <table>
+      {% for post in site.posts limit:6 %}
+      <tr>
+        <td><time datetime="{{ post.date }}"><strong>{{ post.date | date_to_string }}</strong></time></td>
+        <td><a href="{{ post.url }}">{{ post.title }}</a></td>
+      </tr>
+      {% endfor %}
+    </table>
+
+    <!--
     <ul>
       {% for post in site.posts limit:6 %}
         <li>
           <time datetime="{{ post.date }}"></time>
           <small>
             <strong>{{ post.date | date_to_string }}</strong>
-        </small>
+          </small>
           <a href="{{ post.url }}">{{ post.title }}</a>
-        </time>
         </li>
       {% endfor %}
     </ul>
+    -->
 
   </section>
