--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,7 @@
     {% endif %}
   {% endif %}
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
+  <link rel="shortcut icon" type="image/png" href="favicon-32x32.png">
   {% if jekyll.environment == 'production' and site.analytics %}
     {% include analytics.html %}
   {% endif %}
