--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,6 +2,7 @@
 
   <h1>
     <a href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
+    <link rel="shortcut icon" type="image/png" href="favicon.png">
   </h1>
 
   <nav>
