--- a/_sass/partials/_utilities.scss
+++ b/_sass/partials/_utilities.scss
@@ -41,10 +41,9 @@ a {
 	outline: none;
 }
 
-ul,
-ol,
-dl {
-	list-style: none;
+ul, ol, dl {
+	/* list-style: inside; */
+	padding: revert;
 }
 
 em {
