--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -10,23 +10,23 @@ layout: default
 
 <section>
 
-  <h3>Posts</h3>
+  <h3>Docs, Posts and Guides</h3>
 
   <ul>
     {% for post in site.posts %}
     {% assign author = site.data.authors[post.author] %}
-      <li>
-        <h4><a href="{{ post.url }}">{{ post.title }}</a></h4>
-        <time datetime="{{ post.date }}">
-          <small>
-            <strong>{{ post.date | date_to_string }}</strong>
-            {% if author %}
-              by {{ author.name }}
-            {% endif %}
-          </small>
-        </time>
-        {{ post.excerpt | strip_newlines | truncate: 180 }}
-      </li>
+    <li>
+      <h4><a href="{{ post.url }}">{{ post.title }}</a></h4>
+      <time datetime="{{ post.date }}">
+        <small>
+          <strong>{{ post.date | date_to_string }}</strong>
+          {% if author %}
+          by {{ author.name }}
+          {% endif %}
+        </small>
+      </time>
+      {{ post.excerpt | strip_newlines | truncate: 180 }}
+    </li>
     {% endfor %}
   </ul>
 
