--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,27 +12,13 @@ layout: default
 
     <h3>Recent posts from the blog</h3>
 
-    <table style="border: 0px solid;overflow: hidden;vertical-align: top;">
+    <table class="MainFront">
       {% for post in site.posts limit:6 %}
       <tr>
-        <td style="padding-right:15px"><time datetime="{{ post.date }}"><strong>{{ post.date | date_to_string }}</strong></time></td>
+        <td><time datetime="{{ post.date }}"><strong>{{ post.date | date: "%Y, %-d %B" }}</strong></time></td>
         <td><a href="{{ post.url }}">{{ post.title }}</a></td>
       </tr>
       {% endfor %}
     </table>
-
-    <!--
-    <ul>
-      {% for post in site.posts limit:6 %}
-        <li>
-          <time datetime="{{ post.date }}"></time>
-          <small>
-            <strong>{{ post.date | date_to_string }}</strong>
-          </small>
-          <a href="{{ post.url }}">{{ post.title }}</a>
-        </li>
-      {% endfor %}
-    </ul>
-    -->
 
   </section>
