--- a/_sass/partials/_app.scss
+++ b/_sass/partials/_app.scss
@@ -19,7 +19,7 @@ body {
 // by default, make any new children of body to span the full track
 body > * {
   grid-column: full;
-  padding: 2rem 1rem;
+  padding: 1rem 1rem;
 }
 
 // header, the first grid row
@@ -28,7 +28,7 @@ header {
   grid-column: full;
   display: grid;
   background-color: $brand-color;
-  padding: 2rem;
+  padding: 1rem;
   @media screen and (min-width: $screen-sm-min) {
     grid-template-columns: 1fr auto;
     grid-column-gap: 1rem;
@@ -42,6 +42,7 @@ header > h1 {
   @media screen and (min-width: $screen-sm-min) {
     padding-bottom: 0;
   }
+  padding-top: 0;
   a,
   a:visited {
     text-decoration: none;
@@ -62,7 +63,7 @@ header > nav {
     float: right;
   }
   ul {
-    // flexbox is better than grid for distributing an unknown qty of children
+    // flex is better than grid for distributing an unknown qty of children
     display: flex;
     li {
       margin-right: 2rem;
@@ -78,9 +79,9 @@ header > nav {
         @media screen and (min-width: $screen-sm-min) {
           padding: 1rem;
         }
-        &[data-current="current page"] {
-          // you can add an active nav item style here
-        }
+        // &[data-current="current page"] {
+        //   // you can add an active nav item style here
+        // }
       }
       a:hover {
         color: white;
@@ -96,9 +97,9 @@ main {
   margin-right: auto;
   margin-left: auto;
   grid-column: main;
-  display: grid;
-  padding-top: 8rem;
-  padding-bottom: 8rem;
+  // display: grid;
+  padding-top: 4rem;
+  padding-bottom: 4rem;
   @media screen and (min-width: $screen-md-min) {
     align-content: start;
   }
@@ -116,8 +117,10 @@ main {
 // blog posts list
 html[data-current="blog"] main > section {
   ul li {
-    padding: 2rem 0;
+    padding: 1rem 0;
     border-bottom: 0.05em solid $hairline-color;
+    // list-style-type: square;
+    list-style-type: none;
     p {
       padding-bottom: 0;
     }
