--- a/_sass/partials/_typography.scss
+++ b/_sass/partials/_typography.scss
@@ -5,10 +5,10 @@
 html {
   font-size: $base-font-size;
   @media screen and (min-width: $screen-xs-min) {
-    font-size: $base-font-size * 1.2;
+    font-size: $base-font-size * 1.1;
   }
   @media screen and (min-width: $screen-md-min) {
-    font-size: $base-font-size * 1.4;
+    font-size: $base-font-size * 1.3;
   }
 }
 
@@ -25,14 +25,18 @@ body {
   font-size: 1.6rem; // this is equivalent to 16px
 }
 
-h1,h2,h3,h4,h5,h6,p,figure,time {
-  padding-bottom: 2rem;
+h1,h2,h3,h4,h5,h6,figure,time {
+  padding: 1.5rem 0 0.2rem 0;
+}
+
+p {
+  padding: 0.3rem 0 0.3rem 0;
 }
 
 h1,h2,h3,h4,h5,h6,figure {
   p + &,
   figure + & {
-    padding-top: 2rem;
+    padding-top: 1rem;
   }
 }
 
@@ -40,9 +44,9 @@ h1,h2,h3,h4,h5,h6,figure {
 p.intro {
   font-size: 2.4rem;
   color: lighten($text-color, 40%);
-  padding-bottom: 4rem;
+  padding-bottom: 3rem;
   @media screen and (min-width: $screen-sm-min) {
-    padding-bottom: 4rem;
+    padding-bottom: 2rem;
   }
 }
 
@@ -53,7 +57,8 @@ h1,h2,h3,h4,h5,h6 {
 
 h2 {
   font-size: 3.2rem;
-  padding-bottom: 4rem;
+  padding-top: 2rem;
+  padding-bottom: .5rem;
 }
 
 h3 {
@@ -62,8 +67,7 @@ h3 {
 
 code {
   font-family: $code-font;
-  font-size: 1.2rem;
-  color: $text-color;
+  color: mix($text-color, rgb(200, 0, 0));
 }
 
 strong {
