--- a/_sass/partials/_typography.scss
+++ b/_sass/partials/_typography.scss
@@ -30,7 +30,8 @@ h1,h2,h3,h4,h5,h6,figure,time {
 }
 
 p {
-  padding: 0.3rem 0 0.3rem 0;
+  padding: 1rem 0 1rem 0;
+  font-family: serif;
 }
 
 h1,h2,h3,h4,h5,h6,figure {
