--- a/_sass/partials/_utilities.scss
+++ b/_sass/partials/_utilities.scss
@@ -173,16 +173,16 @@ button {
 }
 
 blockquote {
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
-  padding-left: 1rem;
-  padding-right: 1rem;
+  margin: 0.5rem 0 0.5rem 0;
+  padding: 0 1rem 0 1rem;
   border-left: 3px solid rgba(148, 41, 241, 0.616);
   background-color: rgba(0, 0, 0, 0.1);
   font-size: 90%;
 }
 
 cite {
+  display: block;
+  text-align: right;
   font-style: italic;
   color: grey;
 }
