--- a/_sass/partials/_variables.scss
+++ b/_sass/partials/_variables.scss
@@ -9,6 +9,7 @@ $hairline-color: rgb(230,230,230);
 $selection-bg-color: rgba(255,255,100,0.5);
 
 // typographic defaults
+// $base-font: serif;
 $base-font: system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Droid Sans,Helvetica Neue,Arial,Noto Sans,sans-serif;
 $code-font: Consolas,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New;
 $base-font-size: 62.5%;
