--- a/_sass/partials/_typography.scss
+++ b/_sass/partials/_typography.scss
@@ -37,10 +37,9 @@ p {
 h1,h2,h3,h4,h5,h6,figure {
   p + &,
   figure + & {
-    padding-top: 1rem;
+    padding: 2rem 0 0 0;
   }
 }
-
 
 p.intro {
   font-size: 2.4rem;
