--- a/_sass/partials/_variables.scss
+++ b/_sass/partials/_variables.scss
@@ -10,8 +10,8 @@ $selection-bg-color: rgba(255,255,100,0.5);
 
 // typographic defaults
 // $base-font: serif;
-$base-font: system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Droid Sans,Helvetica Neue,Arial,Noto Sans,sans-serif;
-$code-font: Consolas,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New;
+$base-font: system-ui,-apple-system,Arial,Noto Sans,sans-serif;
+$code-font: Consolas,Liberation Mono,DejaVu Sans Mono,Courier New;
 $base-font-size: 62.5%;
 $base-font-weight: 300;
 $bold-font-weight: 600;
