Removed list style for "previous" and "next" link.

--- a/_sass/partials/_app.scss
+++ b/_sass/partials/_app.scss
@@ -132,6 +132,7 @@ nav[aria-label="Adjacent Posts"] {
   ul {
     display: flex;
     li {
+      list-style: none;
       flex: 0 0 50%;
       width: auto;
       &:nth-child(2) {
