--- a/_sass/partials/_typography.scss
+++ b/_sass/partials/_typography.scss
@@ -25,8 +25,12 @@ body {
   font-size: 1.6rem; // this is equivalent to 16px
 }
 
-h1,h2,h3,h4,h5,h6,figure,time {
+h1,h2,h3,h4,h5,h6,figure {
   padding: 1.5rem 0 0.2rem 0;
+}
+
+time {
+  padding: 0;
 }
 
 p {
