--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,8 +15,9 @@ layout: default
     <table class="MainFront">
       {% for post in site.posts limit:6 %}
       <tr>
-        <td><a href="{{ post.url }}">{{ post.title }}</a></td></br>
-        
+        <td><a href="{{ post.url }}">{{ post.title }}</a></td>
+      </tr>
+      <tr>
         <td><time datetime="{{ post.date }}">{{ post.date | date: "%Y, %-d %B" }}</time></td>
       </tr>
       {% endfor %}
