--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,7 +18,7 @@ layout: default
         <td><a href="{{ post.url }}">{{ post.title }}</a></td>
       </tr>
       <tr>
-        <td><h6></td><time datetime="{{ post.date }}">{{ post.date | date: "%Y, %-d %B" }}</time></td></h6>
+        <td><small><time datetime="{{ post.date }}">{{ post.date | date: "%Y, %-d %B" }}</time></small>small></td>
       </tr>
       {% endfor %}
     </table>
