--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,32 +4,21 @@ layout: default
 
 <h2>{{ page.title }}</h2>
 
-  {% include page-intro.html %}
+{% include page-intro.html %}
 
-  {{ content }}
+{{ content }}
 
-  <section>
+<section>
 
-    <h3>Recent posts from the blog</h3>
+  <h3>Recent posts from the blog</h3>
 
-    <table class="MainFront">
-      {% for post in site.posts limit:6 %}
-      <tr>
-        <td><a href="{{ post.url }}">{{ post.title }}</a></td>
-      </tr>
-      <tr>
-        <td><time datetime="{{ post.date }}">{{ post.date | date: "%Y, %-d %B" }}</time></td>
-      </tr>
-      {% endfor %}
-    </table>
+  <ul class="MainFront">
+    {% for post in site.posts limit:6 %}
+    <li>
+      <a href="{{ post.url }}">{{ post.title }}</a>
+      <time datetime="{{ post.date }}">{{ post.date | date: "%Y, %-d %B" }}</time>
+    </li>
+    {% endfor %}
+  </ul>
 
-        <!-- <table class="MainFront">
-      {% for post in site.posts limit:6 %}
-      <tr>
-        <td><time datetime="{{ post.date }}"><strong>{{ post.date | date: "%Y, %-d %B" }}</strong></time></td>
-        <td><a href="{{ post.url }}">{{ post.title }}</a></td>
-      </tr>
-      {% endfor %}
-    </table> -->
-
-  </section>
+</section>
