--- a/_sass/partials/_normalize.scss
+++ b/_sass/partials/_normalize.scss
@@ -1,23 +1,3 @@
-/**
- * 1. Set default font family to sans-serif.
- * 2. Prevent iOS and IE text size adjust after device orientation change,
- *    without disabling user zoom.
- */
-
-html {
-  font-family: sans-serif; /* 1 */
-  -ms-text-size-adjust: 100%; /* 2 */
-  -webkit-text-size-adjust: 100%; /* 2 */
-}
-
-/**
- * Remove default margin.
- */
-
-body {
-  margin: 0;
-}
-
 /* HTML5 display definitions
    ========================================================================== */
 
@@ -160,7 +140,7 @@ small {
 
 sub,
 sup {
-  font-size: 75%;
+  font-size: 85%;
   line-height: 0;
   position: relative;
   vertical-align: baseline;
@@ -204,20 +184,15 @@ figure {
   margin: 1em 40px;
 }
 
-/**
- * Address differences between Firefox and other browsers.
- */
-
 hr {
   padding: 0;
   border: none;
   // border-top: medium double #333;
-  // -webkit-box-sizing: content-box;
   // box-sizing: content-box;
   width: 100%;
-  background: rgb(0, 70, 70);
+  background: $brand-color;
   height: 5px;
-  border-right: rgb(99, 200, 150) solid 12px;
+  border-right: $link-color solid 12px;
 }
 
 /**
