--- a/_sass/partials/_typography.scss
+++ b/_sass/partials/_typography.scss
@@ -2,15 +2,15 @@
 
 // set font sizes in percent on the root element
 
-html {
-  font-size: $base-font-size;
-  @media screen and (min-width: $screen-xs-min) {
-    font-size: $base-font-size * 1.1;
-  }
-  @media screen and (min-width: $screen-md-min) {
-    font-size: $base-font-size * 1.3;
-  }
-}
+// html {
+//   font-size: $base-font-size;
+//   @media screen and (min-width: $screen-xs-min) {
+//     font-size: $base-font-size * 1.1;
+//   }
+//   @media screen and (min-width: $screen-md-min) {
+//     font-size: $base-font-size * 1.3;
+//   }
+// }
 
 // now we can specify a single font size in rem for each of our elements
 // the root breakpoints above will then scale all elements together
@@ -22,7 +22,6 @@ body {
   font-weight: $base-font-weight;
   font-style: normal;
 	font-variant: normal;
-  font-size: 1.6rem; // this is equivalent to 16px
 }
 
 h1,h2,h3,h4,h5,h6,figure {
@@ -34,24 +33,25 @@ time {
 }
 
 p {
-  padding: 1rem 0 1rem 0;
+  margin: 1rem 0;
   font-family: serif;
 }
 
 h1,h2,h3,h4,h5,h6,figure {
   p + &,
   figure + & {
-    padding: 2rem 0 0 0;
+    padding: 1.5rem 0 0 0;
   }
 }
 
 p.intro {
-  font-size: 2.4rem;
+  font-size: 1.6rem;
+  margin: 0;
   color: lighten($text-color, 40%);
-  padding-bottom: 3rem;
-  @media screen and (min-width: $screen-sm-min) {
-    padding-bottom: 2rem;
-  }
+  // padding-bottom: 3rem;
+  // @media screen and (min-width: $screen-sm-min) {
+  //   padding-bottom: 2rem;
+  // }
 }
 
 h1,h2,h3,h4,h5,h6 {
@@ -60,13 +60,13 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 h2 {
-  font-size: 3.2rem;
-  padding-top: 2rem;
+  font-size: 2rem;
+  padding-top: 1rem;
   padding-bottom: .5rem;
 }
 
 h3 {
-  font-size: 2rem;
+  font-size: 1.7rem;
 }
 
 code {
@@ -78,13 +78,13 @@ strong {
   font-weight: $bold-font-weight;
 }
 
-small {
-	font-size: 1.2rem;
-}
+// small {
+// 	font-size: 1.2rem;
+// }
 
 a,
 a:visited {
-  border-bottom: 0.05em solid $link-color;
+  // border-bottom: 0.05em solid $link-color;
 	text-decoration: none;
 	color: $link-color;
 }
@@ -96,10 +96,10 @@ a:active {
   color: $link-hover-color;
 }
 
-header > h1 {
-  line-height: $base-line-height;
-  font-weight: $base-font-weight;
-  @media screen and (min-width: $screen-sm-min) {
-    text-align: left;
-  }
-}
+// header > h1 {
+//   line-height: $base-line-height;
+//   font-weight: $base-font-weight;
+//   @media screen and (min-width: $screen-sm-min) {
+//     text-align: left;
+//   }
+// }
