--- a/_sass/partials/_variables.scss
+++ b/_sass/partials/_variables.scss
@@ -1,25 +1,29 @@
 // site colours
 $text-color: rgb(40,40,40);
-$text-color-negative: white;
-$brand-color: rgb(20, 14, 44);
+$text-color-negative: rgb(236, 236, 236);
+$brand-color: rgb(29, 21, 63);
 $link-color: rgb(0,114,154);
 $link-hover-color: rgb(0,57,78);
 $grey-bg-color: rgb(243,243,243);
 $hairline-color: rgb(230,230,230);
-$selection-bg-color: rgba(255,255,100,0.5);
+// $selection-bg-color: rgba(54, 28, 110, 0.5);
 
 // typographic defaults
 // $base-font: serif;
-$base-font: system-ui,-apple-system,Arial,Noto Sans,sans-serif;
-$code-font: Consolas,Liberation Mono,DejaVu Sans Mono,Courier New;
-$base-font-size: 62.5%;
+$base-font: Verdana, Arial, sans-serif;
+$read-font: "Times New Roman", Times, serif;
+// $read-font: Georgia, Garamond, serif;
+$code-font: 'Courier New', monospace;
+
+// $base-font-size: 62.5%;
+$base-font-size: 100%;
 $base-font-weight: 300;
 $bold-font-weight: 600;
 $base-line-height: 1.5;
 
 // viewport breakpoints
 $screen-xs-min: 480px;
-$screen-sm-min: 540px;
+$screen-sm-min: 768px;
 $screen-md-min: 992px;
 $screen-lg-min: 1240px;
 $screen-xl-min: 1920px;
