--- a/_sass/partials/_variables.scss
+++ b/_sass/partials/_variables.scss
@@ -9,8 +9,8 @@ $foot-bg-color: rgb(243, 243, 243);
 $hairline-color: rgb(230, 230, 230);
 
 // site colors dark mode
-$dark-background: #38444d;
-$dark-brand-color: #262626;
+$dark-background: #222;
+$dark-brand-color: #2a2a2a;
 $dark-text-color: rgb(202, 207, 231);
 $dark-link-color: rgb(163, 233, 233);
 $dark-code-color: rgb(245, 171, 171);
@@ -19,8 +19,8 @@ $dark-foot-bg-color: rgb(69, 72, 75);
 $dark-hairline-color: rgb(114, 114, 114);
 
 // typographic defaults
-$base-font: Verdana, Arial, sans-serif;
-$read-font: "Times New Roman", Times, serif;
+$base-font: "Helvetica",sans-serif;
+$read-font: "Helvetica",sans-serif;
 $code-font: "Courier New", monospace;
 
 $base-font-size: 100%;
