FIxed width of image on website.

--- a/_sass/partials/_app.scss
+++ b/_sass/partials/_app.scss
@@ -118,6 +118,11 @@ nav.menu {
   // div.nav-left {
   //   float: right;
   // }
+
+  img.logo {
+    width: 32px;
+    display: inline;
+  }
 }
 
 .logo {
