--- a/_sass/partials/_utilities.scss
+++ b/_sass/partials/_utilities.scss
@@ -175,12 +175,12 @@ em {
 //   -moz-osx-font-smoothing: grayscale;
 // }
 
-// img {
-//   display: block;
-//   // width: 100%;
-//   // max-width: 100%;
-//   height: auto;
-// }
+img {
+  display: block;
+  width: 100%;
+  max-width: 100%;
+  height: auto;
+}
 
 pre {
   background-color: rgb(0, 56, 56);
