Little fix for table and font.

--- a/_sass/partials/_normalize.scss
+++ b/_sass/partials/_normalize.scss
@@ -400,7 +400,9 @@ optgroup {
    ========================================================================== */
 
 table {
-  margin: 0.5rem 0 1rem 0;
+  margin: 0.5rem auto 1rem auto;
+
+  
   border-collapse: collapse;
 }
 
