--- a/_sass/partials/_utilities.scss
+++ b/_sass/partials/_utilities.scss
@@ -163,7 +163,7 @@ dl {
   // list-style: inside;
   margin: 1rem 0 1rem 0;
   padding: revert;
-  font-family: serif;
+  font-family: $read-font;
 }
 
 em {
