--- a/_sass/partials/_normalize.scss
+++ b/_sass/partials/_normalize.scss
@@ -180,9 +180,9 @@ svg:not(:root) {
  * Address margin not present in IE 8/9 and Safari.
  */
 
-figure {
-  margin: 1em 40px;
-}
+// figure {
+//   margin: 1em 40px;
+// }
 
 hr {
   padding: 0;
