--- a/_sass/partials/_typography.scss
+++ b/_sass/partials/_typography.scss
@@ -28,7 +28,7 @@ body {
 	font-variant: normal;
 }
 
-h1,h2,h3,h4,h5,h6,figure {
+h1,h2,h3,h4,h5,h6 {
   padding: 1.5rem 0 0.2rem 0;
 }
 
@@ -41,10 +41,10 @@ p {
   font-family: $read-font;
 }
 
-h1,h2,h3,h4,h5,h6,figure {
+h1,h2,h3,h4,h5,h6 {
   p + &,
   figure + & {
-    padding: 1.5rem 0 0 0;
+    padding: 1rem 0 0 0;
   }
 }
 
