--- a/_sass/partials/_typography.scss
+++ b/_sass/partials/_typography.scss
@@ -25,10 +25,15 @@ body {
   font-family: $base-font;
   line-height: $base-line-height;
   font-style: normal;
-	font-variant: normal;
+  font-variant: normal;
 }
 
-h1,h2,h3,h4,h5,h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   padding: 1.5rem 0 0.2rem 0;
 }
 
@@ -41,7 +46,12 @@ p {
   font-family: $read-font;
 }
 
-h1,h2,h3,h4,h5,h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   p + &,
   figure + & {
     padding: 1rem 0 0 0;
@@ -58,7 +68,12 @@ p.intro {
   // }
 }
 
-h1,h2,h3,h4,h5,h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-weight: $bold-font-weight;
   line-height: $base-line-height / 1.3;
 }
@@ -66,7 +81,7 @@ h1,h2,h3,h4,h5,h6 {
 h2 {
   font-size: 2rem;
   padding-top: 1rem;
-  padding-bottom: .5rem;
+  padding-bottom: 0.5rem;
 }
 
 h3 {
@@ -92,8 +107,8 @@ strong {
 a,
 a:visited {
   // border-bottom: 0.05em solid $link-color;
-	text-decoration: none;
-	color: $link-color;
+  text-decoration: none;
+  color: $link-color;
   @media (prefers-color-scheme: dark) {
     color: $dark-link-color;
   }
