--- a/_sass/partials/_typography.scss
+++ b/_sass/partials/_typography.scss
@@ -30,6 +30,7 @@ body {
 
 h1,h2,h3,h4,h5,h6 {
   padding: 1.5rem 0 0.2rem 0;
+  margin: 0;
 }
 
 time {
@@ -39,6 +40,10 @@ time {
 p {
   margin: 1rem 0;
   font-family: $read-font;
+}
+
+figure {
+  margin: 0;
 }
 
 h1,h2,h3,h4,h5,h6 {
